--- a/files/stacks_page_page0.css
+++ b/files/stacks_page_page0.css
@@ -1022,20 +1022,38 @@
 
 #bgvideo {
 	position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
+  left: 5%;
+  top: 15%;
+  width: 60%;
 }
 
 #logo {
 	position: absolute;
-	width: 20%;
+	width: 25%;
 	height: auto;
+	right: 5%;
+	top: 5%;
 }
 
 #seit {
 	position: absolute;
-  right: 1%;
-  top: 0;
+  right: 5%;
+  bottom: 20%;
   font-size: 24px;
+  text-align: right;
+}
+
+#green-foot {
+	background-color: rgba(198, 222, 161, 1.00);
+	height: 10%;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+}
+
+
+#mouser-stacks_in_87 {
+	top: 25%;
+	position: relative;
+	z-index: 2;
 }
